<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/drawer_home"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/Workout"
        android:icon="@drawable/workout"
        android:title="@string/workout" />
    <item
        android:id="@+id/age_cal"
        android:icon="@drawable/calculate_24"
        android:title="@string/age_cal" />
    <item
        android:id="@+id/bmi"
        android:icon="@drawable/calculate_24"
        android:title="@string/bmi_cal" />

    <item
        android:id="@+id/setting"
        android:icon="@drawable/setting"
        android:title="@string/setting" />


    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/rateus"
                android:icon="@drawable/rateus"
                android:title="@string/rate_us" />
            <item
                android:id="@+id/share"
                android:icon="@drawable/share"
                android:title="@string/share" />
            <item
                android:id="@+id/feedback"
                android:icon="@drawable/feedback"
                android:title="@string/feedback" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />
        </menu>
    </item>


</menu>