<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Registration.Sign_in">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_280dp"
            android:background="@drawable/background_gradient"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/logo_linearlayout_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/_13dp">

            <ImageView
                android:layout_width="@dimen/_110dp"
                android:layout_height="@dimen/_100dp"
                android:scaleType="fitXY"
                android:src="@drawable/applogo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/start_exe_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_linearlayout_sign_up"
            android:layout_margin="@dimen/_8dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_15dp"
            app:cardElevation="@dimen/_5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_14dp"
                android:paddingTop="@dimen/_20dp"
                android:paddingRight="@dimen/_14dp">

                <EditText
                    android:id="@+id/usernameEditText_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:background="@drawable/round_edittext_border"
                    android:drawableLeft="@drawable/person_username"
                    android:drawablePadding="@dimen/_10dp"
                    android:hint="User Name"
                    android:maxLength="15"
                    android:padding="@dimen/_9dp"
                    android:singleLine="true"
                    android:textSize="@dimen/_15sp" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_14dp"
                    android:paddingBottom="@dimen/_14dp">

                    <EditText
                        android:id="@+id/passwordEditText_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5dp"
                        android:background="@drawable/round_edittext_border"
                        android:drawableLeft="@drawable/lock"
                        android:drawablePadding="@dimen/_10dp"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:maxLength="15"
                        android:padding="@dimen/_9dp"
                        android:singleLine="true"
                        android:textSize="@dimen/_15sp" />

                    <ImageView
                        android:id="@+id/imageViewA_sign_in"
                        android:layout_width="@dimen/_20dp"
                        android:layout_height="@dimen/_20dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/_10dp"
                        android:src="@drawable/hide"
                        android:visibility="visible" />

                    <ImageView
                        android:id="@+id/imageViewB_sign_in"
                        android:layout_width="@dimen/_20dp"
                        android:layout_height="@dimen/_20dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/_10dp"
                        android:src="@drawable/eye"
                        android:visibility="invisible" />

                </RelativeLayout>

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_14dp"
                    android:text="@string/remember_me"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10dp"
                    app:cardBackgroundColor="@color/notification_bar"
                    app:cardCornerRadius="@dimen/_11dp"
                    app:cardElevation="@dimen/_3dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/sign_in"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center"
                        android:padding="@dimen/_8dp"
                        android:text="@string/sign_in"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="@dimen/_8dp"
                    android:text="@string/forgot_pass"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/_15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center"
                        android:text="@string/do_not_have_Acc"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/notification_bar"
                        app:cardCornerRadius="@dimen/_4dp"
                        app:cardElevation="@dimen/_3dp"
                        app:cardUseCompatPadding="true">

                        <TextView
                            android:id="@+id/sign_up"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?android:attr/selectableItemBackground"
                            android:gravity="center"
                            android:padding="@dimen/_5dp"
                            android:text="@string/sign_up"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</ScrollView>